# restless

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pre_build_tests.sh  pyproject.toml
.github/workflows/: push_checks.yml
requirements/: dev.txt  prod.txt
restless/: __init__.py  ansible.py  ansible_funks.py  app.py  database.py  db.py  db_connect.py  git_funks.py  git_manager.py  main.py  project.py  service.py  services.py  settings.py
restless/service/: __init__.py  db.py  service.py
restless/tests/: __init__.py  test_ansible.py  test_ansible_funks.py  test_app.py  test_database.py  test_git_funks.py  test_git_manager.py  test_project.py  test_service.py  test_service_db.py  test_service_service.py  test_services.py
src/: __init__.py  main.py  settings.py
tests/: __init__.py  test_settings.py
