[tool.poetry]
name = "restless"
version = "0.1.1"
description = "Ansible interactions"
authors = ["Get-Tony <Get-Tony@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.1.0"
ansible-runner = "^2.3.1"
ansible-builder = "^1.2.0"
lib_standard = { git = "https://github.com/Get-Tony/lib_standard.git", branch = "main" }
gitpython = "^3.1.30"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.20.2"
mypy = "^0.991"
pylint = "^2.15.10"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pydocstyle = "^6.3.0"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
