[tool.poetry]
name = "restless"
version = "0.1.9"
description = "Ansible process control."
authors = ["Get-Tony <Get-Tony@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.3.0"
ansible-runner = "^2.3.1"
ansible-builder = "^1.2.0"
gitpython = "^3.1.30"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.6"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
