[build-system]
requires = ["setuptools>=67.6.0", "wheel>=0.38.4", "toml>=0.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "restless"
authors = [
  {name="Anthony Pagan", email="Get-Tony@outlook.com"}
]
description = "A process management tool."
requires-python = ">=3.10"
dynamic = ["version", "readme"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: Unix",
    "Environment :: Console",
]
dependencies = [
  "ansible>=7.3.0",
  "gitpython>=3.1.30",
  "pydantic>=1.8.2",
  "email-validator>=1.1.3",
  "python-dotenv>=0.19.2",
  "click>=8.1.3",
  "tabulate>=0.8.9",
  "types-tabulate>=0.0.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.0.254",
  "mypy>=0.991",
  "black>=22.12.0",
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "isort>=5.4.0",
  "ipykernel>=6.21.3",
  "build>=0.7.0",
  "toml>=0.10.2",
]

[project.urls]
"Homepage" = "https://github.com/Get-Tony/restless"
"Bug Tracker" = "https://github.com/Get-Tony/restless/issues"


[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr="src.__version__"}
readme = {file="README.md", encoding="utf-8", content_type="text/markdown"}

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 79
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src", "tests"]
pretty = true
verbosity = 0
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["ansible.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -rsxX -l --tb=short --strict-markers --cov=src --cov-report=term-missing --cov-report=xml"
markers = [
  "tmp: Temporary",
  "optional: Optional",
]

[project.scripts]
restless = "src.main:cli"
